--- a/applications/generic/system_reloader.yaml
+++ b/applications/generic/system_reloader.yaml
@@ -17,7 +17,7 @@ spec:
           watchGlobally: true
   destination:
     server: https://kubernetes.default.svc
-    namespace: argo-system
+    namespace: kube-system
   syncPolicy:
     automated:
       prune: true
