--- a/applications/app_fhevm_zama.yaml
+++ b/applications/app_fhevm_zama.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: apps
   source:
-    repoURL: https://github.com/amunt0/fhevm-zama
+    repoURL: https://github.com/amunt0/fhevm
     targetRevision: HEAD
     path: chart
     helm:
