--- a/applications/generic/apps_indexer.yaml
+++ b/applications/generic/apps_indexer.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/amunt0/argocd-apps 
     targetRevision: HEAD
-    path: configs/deployments/evm-indexer.yaml
+    path: configs/indexer/
   destination:
     server: https://kubernetes.default.svc
     namespace: fhevm
