--- a/configs/indexer/templates/deployment.yaml
+++ b/configs/indexer/templates/deployment.yaml
@@ -16,26 +16,49 @@ spec:
       containers:
         - name: evm-indexer
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: Always
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-            - name: CONFIG_PATH
-              value: "/etc/eth-indexer/config.toml"
+            - name: RPC_ENDPOINT
+              value: "{{ .Values.indexer.rpcEndpoint }}"
+            - name: BLOCKS_IN_MEMORY
+              value: "{{ .Values.indexer.blocksInMemory }}"
+            - name: ROTATION_BLOCKS
+              value: "{{ .Values.indexer.rotationBlocks }}"
+            - name: METRICS_PORT
+              value: "{{ .Values.indexer.metricsPort }}"
+            - name: DATA_DIR
+              value: "/data/eth-indexer"
+            - name: START_BLOCK
+              value: "{{ .Values.indexer.startBlock }}"
             - name: RUST_LOG
-              value: "info,eth_high_perf_indexer=debug"
+              value: "info"
             - name: RUST_BACKTRACE
               value: "1"
           ports:
             - name: metrics
-              containerPort: {{ .Values.metrics.port }}
+              containerPort: {{ .Values.indexer.metricsPort }}
           volumeMounts:
             - name: data
               mountPath: /data/eth-indexer
-            - name: config
-              mountPath: /etc/eth-indexer
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+          lifecycle:
+            preStop:
+              exec:
+                command: ["sh", "-c", "sleep 10"]
+          livenessProbe:
+            httpGet:
+              path: /metrics
+              port: metrics
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /metrics
+              port: metrics
+            initialDelaySeconds: 5
+            periodSeconds: 10
       volumes:
         - name: data
           persistentVolumeClaim:
             claimName: evm-indexer-data
-        - name: config
-          configMap:
-            name: evm-indexer-config
