--- a/configs/indexer/templates/deployment.yaml
+++ b/configs/indexer/templates/deployment.yaml
@@ -42,22 +42,13 @@ spec:
               mountPath: /data/eth-indexer
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-          lifecycle:
-            preStop:
-              exec:
-                command: ["sh", "-c", "sleep 10"]
-          livenessProbe:
-            httpGet:
-              path: /metrics
-              port: metrics
-            initialDelaySeconds: 30
-            periodSeconds: 10
           readinessProbe:
             httpGet:
               path: /metrics
               port: metrics
-            initialDelaySeconds: 5
-            periodSeconds: 10
+            initialDelaySeconds: 30
+            periodSeconds: 20
+            timeoutSeconds: 5
       volumes:
         - name: data
           persistentVolumeClaim:
