--- a/applications/generic/apps_indexer.yaml
+++ b/applications/generic/apps_indexer.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: evm-indexer
-  namespace: argo-system
+  namespace: argocd
 spec:
   project: apps
   source:
