--- a/applications/generic/monitor_prometheus.yaml
+++ b/applications/generic/monitor_prometheus.yaml
@@ -29,7 +29,7 @@ spec:
           enabled: false
   destination:
     server: https://kubernetes.default.svc
-    namespace: monitoring-system
+    namespace: monitoring
   syncPolicy:
     automated:
       prune: true
