--- a/modules/applications/app_fhevm_zama.yaml
+++ b/modules/applications/app_fhevm_zama.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: fhevm-zama
-  namespace: argo-system
+  namespace: argocd
   labels:
     category: apps
 spec:
