--- a/modules/applications/generic/system_forecastly.yaml
+++ b/modules/applications/generic/system_forecastly.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: forecastle
-  namespace: argo-system
+  namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
@@ -17,7 +17,7 @@ spec:
           config:
             namespaceSelector:
               matchNames:
-                - argo-system
+                - argocd
   destination:
     server: https://kubernetes.default.svc
     namespace: kube-system
