--- a/modules/applications/generic/system_reloader.yaml
+++ b/modules/applications/generic/system_reloader.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: reloader
-  namespace: argo-system
+  namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
