fix external dns

--- a/configs/coredns/configmap.yaml
+++ b/configs/coredns/configmap.yaml
@@ -1,11 +1,12 @@
+# configs/coredns/configmap.yaml
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: coredns-custom
   namespace: kube-system
 data:
-  custom.override: | # Changed from home.override to custom.override
-    home {
+  custom.override: |
+    home:53 {
         hosts {
             192.168.68.64 nas.home
             fallthrough
