fix external dns

--- a/configs/coredns/kustomization.yaml
+++ b/configs/coredns/kustomization.yaml
@@ -1,6 +1,15 @@
+# configs/coredns/kustomization.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: kube-system
 resources:
   - configmap.yaml
-patchesStrategicMerge:
-  - deployment-patch.yaml
+patches:
+  - target:
+      kind: Deployment
+      name: coredns
+      namespace: kube-system
+    patch: |-
+      - op: replace
+        path: /spec/replicas
+        value: 3
