--- a/modules/applications/metal/coredns.yaml
+++ b/modules/applications/metal/coredns.yaml
@@ -2,11 +2,11 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: coredns-custom
-  namespace: argocd
+  namespace: ${argo_cd_namespace}
 spec:
   project: system
   source:
-    repoURL: https://github.com/amunt0/argocd-apps # Your repo
+    repoURL: https://github.com/amunt0/argocd-apps
     targetRevision: HEAD
     path: configs/coredns
     kustomize: {}
