--- a/configs/coredns/deployment-patch.yaml
+++ b/configs/coredns/deployment-patch.yaml
@@ -1,7 +1,10 @@
+# configs/coredns/deployment-patch.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: coredns
   namespace: kube-system
+  annotations:
+    argocd.argoproj.io/sync-options: Replace=true
 spec:
   replicas: 3
