--- a/configs/coredns/configmap.yaml
+++ b/configs/coredns/configmap.yaml
@@ -1,12 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: coredns-custom
+  name: coredns
   namespace: kube-system
 data:
-  custom.override: |
-    hosts {
-        192.168.68.64 nas.home
-        fallthrough
-    }
-    forward . 1.1.1.1 8.8.8.8
+  NodeHosts: |
+    192.168.68.64 nas.home nas
