--- a/configs/coredns/configmap.yaml
+++ b/configs/coredns/configmap.yaml
@@ -1,8 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: coredns
+  name: coredns-custom # This is mounted as custom-config-volume
   namespace: kube-system
 data:
-  NodeHosts: |
-    192.168.68.64 nas.home nas
+  custom.server: | # Using .server instead of .override
+    home {
+        forward . 1.1.1.1 8.8.8.8
+    }
