--- a/configs/coredns/configmap.yaml
+++ b/configs/coredns/configmap.yaml
@@ -1,12 +1,36 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: coredns-custom
+  name: coredns
   namespace: kube-system
 data:
-  home.server: |
-    home {
-        file /etc/coredns/home.db
+  Corefile: |
+    .:53 {
         errors
-        log
+        health {
+            lameduck 5s
+        }
+        ready
+        kubernetes cluster.local in-addr.arpa ip6.arpa {
+            pods insecure
+            fallthrough in-addr.arpa ip6.arpa
+        }
+        hosts /etc/coredns/NodeHosts {
+            reload 1s
+            fallthrough
+        }
+        prometheus :9153
+        forward . /etc/resolv.conf {
+            policy sequential
+        }
+        cache 30
+        loop
+        reload 5s
+        loadbalance
+    }
+    home:53 {
+        prometheus :9153
+        forward . /etc/resolv.conf
+        cache 30
+        reload 5s
     }
