fix external dns

--- a/configs/coredns/configmap.yaml
+++ b/configs/coredns/configmap.yaml
@@ -1,3 +1,4 @@
+# configs/coredns/configmap.yaml
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -29,21 +30,11 @@ data:
         loadbalance
     }
     home:53 {
-        file /etc/coredns/home.db {
-            reload 5s
+        etcd {
+            path /skydns
+            endpoint http://127.0.0.1:2379
         }
         prometheus :9153
-        cache 30
-    }ntial
-        }
-        cache 30
-        loop
-        reload 5s
-        loadbalance
-    }
-    home:53 {
-        prometheus :9153
-        forward . /etc/resolv.conf
         cache 30
         reload 5s
     }
