--- a/modules/applications/metal/externaldns.yaml
+++ b/modules/applications/metal/externaldns.yaml
@@ -1,30 +1,33 @@
-project: system
-source:
-  repoURL: "https://kubernetes-sigs.github.io/external-dns/"
-  targetRevision: 1.14.1
-  helm:
-    values: |
-      provider: coredns
-      policy: sync
-      domainFilters:
-        - "home"
-      txtOwnerId: "home-cluster"
-      sources:
-        - ingress
-        - service
-      coredns:
-        etcdEndpoints: []  # Remove etcd dependency
-        corednsPrefix: ""  # Remove prefix
-      logLevel: debug
-      interval: "1m"
-      registry: txt
-  chart: external-dns
-destination:
-  server: "https://kubernetes.default.svc"
-  namespace: external-dns
-syncPolicy:
-  automated:
-    prune: true
-    selfHeal: true
-  syncOptions:
-    - CreateNamespace=true
+# applications/dns/externaldns.yaml
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: external-dns
+  namespace: argocd
+spec:
+  project: system
+  source:
+    repoURL: https://kubernetes-sigs.github.io/external-dns/
+    targetRevision: 1.14.1
+    chart: external-dns
+    helm:
+      values: |
+        provider: coredns
+        policy: sync
+        domainFilters:
+          - "home"
+        txtOwnerId: "home-cluster"
+        sources:
+          - ingress
+          - service
+        coredns:
+          etcdEndpoints: "http://coredns.kube-system:53"
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: external-dns
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
