fix external dns

--- a/modules/applications/metal/externaldns.yaml
+++ b/modules/applications/metal/externaldns.yaml
@@ -21,7 +21,7 @@ spec:
           - ingress
           - service
         coredns:
-          etcdEndpoints: "http://coredns.kube-system:53"
+          etcdEndpoints: "http://127.0.0.1:2379"
   destination:
     server: https://kubernetes.default.svc
     namespace: external-dns
