--- a/modules/applications/metal/externaldns.yaml
+++ b/modules/applications/metal/externaldns.yaml
@@ -1,4 +1,5 @@
 # applications/dns/externaldns.yaml
+# applications/dns/externaldns.yaml
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -20,47 +21,24 @@ spec:
         sources:
           - ingress
           - service
-        coredns:
-          etcdEndpoints: "http://192.168.68.64:2379"
-          etcdCorednsPrefix: "/skydns"
 
-        # RBAC configuration
-        rbac:
-          create: true
-          
-        serviceAccount:
-          create: true
-          name: external-dns
-          
-        # Additional args for etcd
+        # Explicit environment variables for etcd configuration
+        env:
+          - name: ETCD_URLS
+            value: http://192.168.68.64:2379
+
+        # Additional arguments for etcd configuration
         extraArgs:
           - --etcd-urls=http://192.168.68.64:2379
-          
-        # Security context
-        podSecurityContext:
-          fsGroup: 65534
-        securityContext:
-          readOnlyRootFilesystem: true
-          runAsNonRoot: true
-          runAsUser: 65532
-          
+          - --coredns-prefix=/skydns
+
+        rbac:
+          create: true
+
         nodeSelector:
           kubernetes.io/hostname: nas
-          
+
         tolerations:
         - key: "node-role.kubernetes.io/control-plane"
           operator: "Exists"
           effect: "NoSchedule"
-        - key: "node-role.kubernetes.io/master"
-          operator: "Exists"
-          effect: "NoSchedule"
-
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: external-dns
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
