fix external dns

--- a/modules/applications/metal/externaldns.yaml
+++ b/modules/applications/metal/externaldns.yaml
@@ -11,36 +11,37 @@ spec:
     chart: external-dns
     helm:
       values: |
-        provider: coredns
-        logLevel: debug
-        sources:
-          - ingress
+        fullnameOverride: "external-dns"
+
+        # Exactly match the working deployment
+        deploymentStrategy:
+          type: Recreate
+
+        # Match the selector and labels
+        selector:
+          app: external-dns
+        podLabels:
+          app: external-dns
+
+        # Match the container configuration
+        image:
+          repository: registry.k8s.io/external-dns/external-dns
+          tag: "v0.15.0"
 
         args:
           - --source=ingress
           - --provider=coredns
           - --log-level=debug
-          - --etcd-urls=http://192.168.68.64:2379
 
         env:
           - name: ETCD_URLS
             value: http://192.168.68.64:2379
 
-        deploymentStrategy:
-          type: Recreate
-
-        rbac:
-          create: true
-
+        # Strip out unnecessary config
+        resources: {}
         serviceAccount:
           create: true
           name: external-dns
-
-        podLabels:
-          app: external-dns
-
-        nameOverride: "external-dns"
-        fullnameOverride: "external-dns"
 
   destination:
     server: https://kubernetes.default.svc
